# pypznn1

./: .gitignore  LICENSE  README.md  requirements.txt
pypznn1/: core.py  game.py
pypznn1/deeplearning/: .core.py.swp  .step09.py.swp  __init__.py  core.py  core_simple.py  cuda.py  dataloaders.py  datasets.py  functions.py  functions_conv.py  layers.py  models.py  optimizers.py  step01.py  step02.py  step03.py  step04.py  step06.py  step08.py  step09.py  step10.py  step11.py  step12.py  step13.py  step14.py  step16.py  step18.py  step19.py  step20.py  step21.py  step22.py  step23.py  step24.py  step26.py  step27.py  step28.py  step29.py  step33.py  step34.py  step35.py  (+25 more)
pypznn1core/: pyproject.toml
pypznn1core/src/pypznn1core/: api.py  cli.py
pypznn1core/tests/: test_direction.py  test_puzzle.py
pznn1/: core.py  game.py  model.h5  rl.py  util.py
tests/deeplearning/: test_basic_math.py  test_batchnorm.py  test_broadcast.py  test_conv2d.py  test_deconv2d.py  test_dropout.py  test_getitem.py  test_im2col.py  test_linear.py  test_loss.py  test_matmul.py  test_max.py  test_pooling.py  test_relu.py  test_resnet.py  test_sigmoid.py  test_softmax.py  test_softmax_cross_entropy.py  test_square.py  test_sum.py  test_transpose.py  test_vgg16.py  test_weight_decay.py
tests/deeplearning/gpu/: test_gpu_basic_math.py  test_gpu_batchnorm.py  test_gpu_broadcast.py  test_gpu_conv2d.py  test_gpu_deconv2d.py  test_gpu_dropout.py  test_gpu_getitem.py  test_gpu_im2col.py  test_gpu_linear.py  test_gpu_loss.py  test_gpu_matmul.py  test_gpu_max.py  test_gpu_pooling.py  test_gpu_sum.py  (+6 more)
